# graphRAG

./: .gitignore  CDR_OLLAMA_Serve.cmd  README.md  create_chroma_db.cmd  create_kg.cmd  generate_kg.cmd  graphRAGnotes.txt  graphrag.cmd  graphrag_query.cmd  judge_harness.cmd  neo4j_graphdb_query.cmd  pyproject.toml  reg_kg_triples_repair_log.json  run.cmd  tree  validation.txt
docs/: reg_kg_triples_repaired.jsonl  reg_kg_triples_rescued.jsonl
graph-rag-compare/: pyproject.toml  run_app.cmd
graph-rag-compare/graph_rag_compare/: config.py  streamlit_app.py  test_questions.json
graph-rag-compare/graph_rag_compare/harness/: comparison_runner.py  logger.py  metrics.py
graph-rag-compare/graph_rag_compare/retrievers/: base.py  file_retriever.py  graphdb_retriever.py
graph-rag-compare/graph_rag_compare/test/: test_embedding.py  test_file_retriever.py  test_graphdb_retriever.py
graph-rag-compare/graph_rag_compare/viz/: diff_view.py  pyvis_graph.py
graph-rag-graphdb/: pyproject.toml  queries.sql
graph-rag-graphdb/graph_rag_graphdb/: graphdb_client.py  multihop_obligations_client.py
graph-rag-semantic/: pyproject.toml  reg_kg_triples.jsonl  reg_kg_triples.jsonl.OLD  reg_kg_triples_v2.jsonl
graph-rag-semantic/graph_rag_semantic/: create_knowledge_graph.py  generate_kg.py  graphrag.py  graphrag_query.py  pipeline.py
graph-rag-semantic/graph_rag_semantic/test/: ctx_token_test.py  embeddingsTest.py  slm_test.py
graph-rag-semantic/graph_rag_semantic/utils/: build_chroma_db.py  config.py  repair_graph.py  repair_kg_jsonl.py  validate_kg.py
metrics/: README.md  RUN1_ comparison_log.jsonl  RUN2_comparison_log.jsonl  RUN3_comparison_log.jsonl  RUN3_scores_summary.json  ground_truth_obligations.json  judge_harness.py  test_queries.json
model/: Modelfile
