[project]
name = "graph-rag-compare"
version = "1.0.0"
description = "Side-by-side comparison of file-based GraphRAG vs GraphDB-backed GraphRAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.32.0",
  "pyvis>=0.3.2",
  "networkx>=3.0",
  "neo4j>=5.0.0",
  "sentence-transformers>=2.5.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
]

[tool.uv]
managed = true

[tool.uv.sources]
graph-rag-semantic = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph_rag_compare"]

[project.scripts]
graph-rag-compare-app = "graph_rag_compare.streamlit_app:main"
