[project]
name = "graph-rag-graphdb"
version = "1.1.0"
description = "GraphDB based GraphRAG for EU and Swiss AI Regulations using Ollama"
# readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "neo4j>=5.0.0",
  "streamlit>=1.32.0",
  "pyvis>=0.3.2",
  "networkx>=3.0",
  "ollama>=0.1.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0",
  "tqdm>=4.66.0",
  "pandas>=2.0.0",
]

[tool.uv]
managed = true

[tool.uv.sources]
graph-rag-semantic = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph_rag_graphdb"]
